<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginClick"
            type="com.sprout.ui.main.login.RegisterActivity.ProxyClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.login.RegisterActivity">


        <com.sprout.ui.custom.CustomVideoView
            android:id="@+id/videoview_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/txt_regis_btn"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:background="@color/green_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:onClick="@{()->loginClick.register()}"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:text="注册" />


        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:textColor="@color/white"
            android:id="@+id/txt_login_title"
            android:textSize="26sp"
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:padding="0dp"
            android:gravity="center"
            android:hint="@string/login_hint"
            android:layout_width="0dp"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textColorHint="#B5B0B0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="#B5B0B0"
            android:background="@drawable/shape_white_lucency_bk_10"
            android:id="@+id/edit_login_phone_number"
            app:layout_constraintTop_toBottomOf="@id/txt_login_title"
            android:layout_height="40dp"
            tools:ignore="TextFields" />


        <EditText
            android:padding="0dp"
            android:gravity="center"
            android:hint="@string/login_get_message"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:textColor="#B5B0B0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:textColorHint="#B5B0B0"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_white_lucency_bk_10"
            android:id="@+id/edit_login_psw"
            app:layout_constraintTop_toBottomOf="@id/edit_login_phone_number"
            android:layout_height="40dp"
            android:inputType="textPassword" />


        <TextView
            android:layout_width="160dp"
            android:textSize="13sp"
            android:background="@drawable/shape_green_lucency_bk_10"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_login_psw"
            android:layout_marginTop="100dp"
            android:textColor="@color/white"
            android:id="@+id/txt_login_commit_btn"
            android:text="@string/login_inpput_code"
            android:onClick="@{()->loginClick.loginBtnCommit()}"
            android:layout_height="35dp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/txt_login_title"
            android:text="@string/login_user_agreement"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"
            android:textSize="11sp"
            android:id="@+id/textView"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />


        <TextView
            android:textColor="@color/white"
            android:textSize="10sp"
            android:text="@string/login_other_fun"
            app:layout_constraintStart_toStartOf="@id/txt_login_title"
            app:layout_constraintBottom_toTopOf="@id/textView"
            android:layout_marginBottom="80dp"
            android:layout_width="wrap_content"
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

        <ImageView
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/txt_login_title"
            android:layout_width="24dp"
            android:src="@mipmap/login_btn_weibo_normal"
            android:id="@+id/image_login_weibo"
            android:layout_height="24dp" />


        <ImageView
            android:layout_width="24dp"
            app:layout_constraintTop_toTopOf="@id/image_login_weibo"
            app:layout_constraintStart_toEndOf="@id/image_login_weibo"
            android:layout_marginStart="30dp"
            android:id="@+id/image_login_btn_wechat"
            android:src="@mipmap/login_btn_wechat_normal"
            android:layout_height="24dp" />


        <ImageView
            android:layout_width="24dp"
            app:layout_constraintTop_toTopOf="@id/image_login_weibo"
            app:layout_constraintStart_toEndOf="@id/image_login_btn_wechat"
            android:layout_marginStart="30dp"
            android:id="@+id/image_login_btn_qq"
            android:src="@mipmap/login_btn_qq_normal"
            android:layout_height="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
